section 4 presentation of affine q-Schur algebra has been typed... moving on to section 6.4 presentation of the generic affine algebra.

--- a/preamble.sty
+++ b/preamble.sty
@@ -203,6 +203,12 @@
 % transpose involution on the generic algebra
 \newcommand{\antipode}[1]{S{#1}}
 
+%localisation at elements of the form 1+qf
+\newcommand{\qfrac}{\mathcal{Q}}
+
+% the $\qfrac form of the q-Schur algebra
+\newcommand{\Qqschur}[1][n,r]{\hat{S}_{\qfrac}(#1)}
+
 % -------------------------------------------- %
 %				TITLE PAGE						 %
 % -------------------------------------------- %
