starting writing the presentation of the generic algebra by a quiver with relations

--- a/preamble.sty
+++ b/preamble.sty
@@ -182,8 +182,11 @@
 % quiver for presentation of q schur algebras.
 \newcommand{\presentationquiver}[1][n,r]{\Gamma(#1)}
 
-% ideal of relations for the quiver presentation
+% ideal of relations for presentation of q-Schur algebras.
 \newcommand{\quiverrelations}[1][n,r]{I(#1)}
+
+% ideal of relations for presentation of generic algebra
+\newcommand{\zerorelations}{\mathcal{J}}
 
 % Schur algebras
 
