made it to 60 pagesgit status

--- a/preamble.sty
+++ b/preamble.sty
@@ -206,6 +206,9 @@
 % transpose involution on the generic algebra
 \newcommand{\antipode}[1]{S{#1}}
 
+% cyclic translation on generic algebra
+\newcommand{\rotation}[1]{\tau{#1}}
+
 %localisation at elements of the form 1+qf
 \newcommand{\qfrac}{\mathcal{Q}}
 
