no changes were expected...

--- a/report.tex
+++ b/report.tex
@@ -2733,6 +2733,19 @@ Under the assumption $r<n$, $\rho$ is a surjective homomorphism of $\integers$-a
 {\color{red}PROVE INJECTIVITY.}
 \end{proof}
 
+\begin{theorem}[Conjecture]
+Even when $r\geq n$, $\rho$ gives a $\integers$-algebra isomorphism
+\begin{equation*}
+\integers\Gamma/{\zerorelations}\to\generic^{ap},
+\end{equation*}
+where $\generic^{ap}$ is the subalgebra of $\generic$ spanned by the aperiodic basis elements.
+\end{theorem}
+
+\begin{proof}[Rough]
+I believe the proof of the preceding theorem will in fact prove the result of this conjecture.
+\end{proof}
+
+
 \section{The period 2 case}
 
 In the case $n=2$ the quiver $\Gamma=\presentationquiver[2,r]$ associated to $\generic[2,r]$ is consists of $r+1$ vertices (totally ordered) with two pairs of edges between adjacent vertices, $(e_1,f_1)$ and $(e_2,f_2)$.
